--- a/.github/workflows/cypress.yml
+++ b/.github/workflows/cypress.yml
@@ -4,27 +4,38 @@ on: [push]
 
 jobs:
   Cypress:
-    runs-on: ubuntu-latest
+    strategy:
+      fail-fast: false
+      matrix:
+        os: ['windows']
+        python-version: [3.7]
+
+    runs-on: ${{ matrix.os }}-latest
+
     steps:
     - uses: actions/checkout@v1
       with:
         fetch-depth: 1
 
-    - name: Install Cypress Dependencies
-      uses: cypress-io/github-action@v1
-      with:
-        runTests: false
-        working-directory: tests/e2e
-
-    - name: Set up Python 3.7
+    - name: Set up Python ${{ matrix.python-version }}
       uses: actions/setup-python@v1
       with:
-        python-version: 3.7
+        python-version: ${{ matrix.python-version }}
 
-    - name: Show Python information
+    - name: Show python information
       run: |
         python -c "import sys; print(sys.version); print(sys.executable); print(sys.platform)"
         python -c "import platform; print(platform.machine()); print(platform.release())"
+
+#####################
+# CACHE LOGIC START #
+#####################
+
+# Unfortunately at this current point in time there does not appear to be a way
+# to easily reuse content across different actions. The below section manages
+# the caching for pymedphys installations from poetry. This logic is often
+# repeated across different actions. Once action step reuse is supported this
+# section will be refactored out.
 
     - uses: actions/cache@v1
       with:
@@ -33,17 +44,38 @@ jobs:
 
     - uses: actions/cache@v1
       with:
+        path: ~/.cache/pypoetry/virtualenvs
+        key: ${{ runner.os }}-poetry-${{ hashFiles('**/poetry.lock') }}
+        restore-keys: |
+          ${{ runner.os }}-poetry-
+
+    - uses: actions/cache@v1
+      if: startsWith(runner.os, 'Linux')
+      with:
         path: ~/.cache/pip
         key: ${{ runner.os }}-pip-${{ hashFiles('**/poetry.lock') }}
         restore-keys: |
           ${{ runner.os }}-pip-
 
     - uses: actions/cache@v1
+      if: startsWith(runner.os, 'macOS')
       with:
-        path: ~/.cache/pypoetry/virtualenvs
-        key: ${{ runner.os }}-poetry-${{ hashFiles('**/poetry.lock') }}
+        path: ~/Library/Caches/pip
+        key: ${{ runner.os }}-pip-${{ hashFiles('**/poetry.lock') }}
         restore-keys: |
-          ${{ runner.os }}-poetry-
+          ${{ runner.os }}-pip-
+
+    - uses: actions/cache@v1
+      if: startsWith(runner.os, 'Windows')
+      with:
+        path: ~\AppData\Local\pip\Cache
+        key: ${{ runner.os }}-pip-${{ hashFiles('**/poetry.lock') }}
+        restore-keys: |
+          ${{ runner.os }}-pip-
+
+###################
+# CACHE LOGIC END #
+###################
 
     - name: Upgrade pip, install poetry
       run: |
@@ -60,6 +92,12 @@ jobs:
     - name: Run PyMedPhys GUI
       run: |
         poetry run pymedphys gui &
+
+    - name: Install Cypress Dependencies
+      uses: cypress-io/github-action@v1
+      with:
+        runTests: false
+        working-directory: tests/e2e
 
     - name: Cypress run
       uses: cypress-io/github-action@v1
