swap back to ubuntu for now
Former-commit-id: f91128ece7cc62bd62f7f3fb523eb6de9869cf2a [formerly b0aba6436db6642cda24ebee50d7428c17ab6e57]
Former-commit-id: eec955f98054be86dd3dee02186b8bcc4d395b78

--- a/.github/workflows/cypress.yml
+++ b/.github/workflows/cypress.yml
@@ -7,7 +7,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        os: ['windows']
+        os: ['ubuntu']
         python-version: [3.7]
 
     runs-on: ${{ matrix.os }}-latest
