--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -73,6 +73,7 @@
     "astype",
     "atol",
     "backlinks",
+    "behaviour",
     "bfgs",
     "biggs",
     "bivariate",
@@ -99,6 +100,7 @@
     "dbfread",
     "dcmread",
     "decubitus",
+    "deidentified",
     "deps",
     "deque",
     "dicom",
@@ -179,6 +181,7 @@
     "maxkb",
     "mdinclude",
     "mephysto",
+    "meterset",
     "minimisation",
     "minimising",
     "mkdir",
@@ -191,6 +194,7 @@
     "mudensity",
     "mybinder",
     "mypy",
+    "namedtuples",
     "nargs",
     "nbcc",
     "ndarray",
@@ -236,6 +240,7 @@
     "reextract",
     "ref",
     "rendermime",
+    "resample",
     "rglob",
     "rtdose",
     "rtol",
