change spell check to british english
Former-commit-id: 33267f9caedaa84caefa2c60fc6e6c9435ecb843

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -19,6 +19,7 @@
   "python.testing.unittestEnabled": false,
   "python.testing.nosetestsEnabled": false,
   "python.testing.pytestEnabled": true,
+  "cSpell.language": "en-GB",
   "cSpell.words": [
     "3DCRT",
     "ASYMX",
@@ -28,7 +29,6 @@
     "Chlap",
     "Customise",
     "DCRT",
-    "Daniele",
     "EPID",
     "Elekta",
     "ICOM",
@@ -78,7 +78,6 @@
     "biggs",
     "bivariate",
     "cefpython",
-    "centralised",
     "chdir",
     "choco",
     "chown",
@@ -182,8 +181,6 @@
     "mdinclude",
     "mephysto",
     "meterset",
-    "minimisation",
-    "minimising",
     "mkdir",
     "mlcs",
     "mosaiq",
@@ -201,13 +198,9 @@
     "ndimage",
     "nopep",
     "noqa",
-    "normalise",
-    "normalised",
     "nrows",
     "nsis",
     "numpy",
-    "optimiser",
-    "organised",
     "osfhandle",
     "pacman",
     "pandoc",
@@ -235,7 +228,6 @@
     "pypoetry",
     "pytest",
     "qcls",
-    "randomisation",
     "rccc",
     "reextract",
     "ref",
