expose the merge_contours api

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -33,6 +33,7 @@
     "Elekta",
     "ICOM",
     "IEXEC",
+    "IMPORTABLES",
     "IMRT",
     "INET",
     "IREAD",
@@ -100,6 +101,7 @@
     "dcmread",
     "decubitus",
     "dedupe",
+    "deduplication",
     "deidentified",
     "deps",
     "deque",
