--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [tool.poetry]
 name = "pymedphys"
-version = "0.27.0dev2"
+version = "0.27.0"
 readme = "README.rst"
 description = "Medical Physics library"
 authors = [
