--- a/.github/workflows/cypress.yml
+++ b/.github/workflows/cypress.yml
@@ -12,6 +12,8 @@ jobs:
 
     runs-on: ${{ matrix.os }}-latest
 
+    if: "contains(github.event.head_commit.message, '[test gui]')"
+
     steps:
     - uses: actions/checkout@v1
       with:
