call pymedphys dev tests instead

--- a/tox.ini
+++ b/tox.ini
@@ -55,12 +55,12 @@ commands =
     slow,yarn,pytest,doctest: poetry install --no-dev -E pytest
     pylint: poetry install --no-dev -E pytest -E pylint
 
-    doctest: poetry run pytest -v --basetemp={envtmpdir} --junitxml=junit/.test.{envname}.xml [] --doctest-modules {toxinidir}
-    pylint: poetry run pytest --pylint --pylint-jobs=1 {toxinidir}
-    slow: poetry run pytest -v --run-only-slow --basetemp={envtmpdir} --junitxml=junit/.test.{envname}.xml [] {toxinidir}
-    yarn: poetry run pytest -v -s --run-only-yarn --basetemp={envtmpdir} --junitxml=junit/.test.{envname}.xml [] {toxinidir}
-    pytest: poetry run pytest -v --basetemp={envtmpdir} --junitxml=junit/.test.{envname}.xml [] {toxinidir}
-    docs: poetry run sphinx-build -W docs {toxinidir}/docs/_build/html
+    doctest: poetry run pymedphys dev tests -v --basetemp={envtmpdir} --junitxml=junit/.test.{envname}.xml [] --doctest-modules {toxinidir}
+    pylint: poetry run pymedphys dev tests --pylint --pylint-jobs=1 {toxinidir}
+    slow: poetry run pymedphys dev tests -v --run-only-slow --basetemp={envtmpdir} --junitxml=junit/.test.{envname}.xml [] {toxinidir}
+    yarn: poetry run pymedphys dev tests -v -s --run-only-yarn --basetemp={envtmpdir} --junitxml=junit/.test.{envname}.xml [] {toxinidir}
+    pytest: poetry run pymedphys dev tests -v --basetemp={envtmpdir} --junitxml=junit/.test.{envname}.xml [] {toxinidir}
+    docs: poetry run pymedphys dev docs
 
     ; production: poetry install -vvv --no-dev
     ; production: pip install pymedphys[pytest,pylint,library]==`poetry run python -c "import pymedphys; print(pymedphys.__version__)"`
