--- a/tox.ini
+++ b/tox.ini
@@ -52,8 +52,8 @@ commands =
     !clean-!stackoverflow: poetry run pip install -r {toxinidir}/requirements-difficult.txt
 
     docs: poetry install --no-dev -E docs
-    slow,yarn,pytest,doctest: poetry install --no-dev -E pytest
-    pylint: poetry install --no-dev -E pytest -E pylint
+    slow,yarn,pytest,doctest: poetry install --no-dev -E tests
+    pylint: poetry install --no-dev -E tests -E pylint
 
     doctest: poetry run pymedphys dev tests -v --basetemp={envtmpdir} --junitxml=junit/.test.{envname}.xml [] --doctest-modules {toxinidir}
     pylint: poetry run pymedphys dev tests --pylint --pylint-jobs=1 {toxinidir}
