--- a/tox.ini
+++ b/tox.ini
@@ -54,11 +54,11 @@ commands =
     docs: poetry install --no-dev -E docs
     slow,yarn,pytest,doctest,pylint: poetry install --no-dev -E tests
 
-    doctest: poetry run pymedphys dev tests -v --basetemp={envtmpdir} --junitxml=junit/.test.{envname}.xml [] --doctest-modules {toxinidir}
-    pylint: poetry run pymedphys dev tests --pylint --pylint-jobs=1 {toxinidir}
-    slow: poetry run pymedphys dev tests -v --run-only-slow --basetemp={envtmpdir} --junitxml=junit/.test.{envname}.xml [] {toxinidir}
-    yarn: poetry run pymedphys dev tests -v -s --run-only-yarn --basetemp={envtmpdir} --junitxml=junit/.test.{envname}.xml [] {toxinidir}
-    pytest: poetry run pymedphys dev tests -v --basetemp={envtmpdir} --junitxml=junit/.test.{envname}.xml [] {toxinidir}
+    doctest: poetry run pymedphys dev tests -v --junitxml=junit/.test.{envname}.xml [] --doctest-modules
+    pylint: poetry run pymedphys dev tests --pylint --pylint-jobs=1
+    slow: poetry run pymedphys dev tests -v --run-only-slow --junitxml=junit/.test.{envname}.xml []
+    yarn: poetry run pymedphys dev tests -v -s --run-only-yarn --junitxml=junit/.test.{envname}.xml []
+    pytest: poetry run pymedphys dev tests -v --junitxml=junit/.test.{envname}.xml []
     docs: poetry run pymedphys dev docs
 
     ; production: poetry install -vvv --no-dev
