--- a/.github/workflows/tox.yml
+++ b/.github/workflows/tox.yml
@@ -219,7 +219,7 @@ jobs:
 
     runs-on: ${{ matrix.os }}-latest
 
-    need: Tox
+    needs: Tox
     if: "!contains(github.event.head_commit.message, '--skip-gui')"
 
     steps:
