--- a/.github/workflows/on-push.yml
+++ b/.github/workflows/on-push.yml
@@ -100,7 +100,7 @@ jobs:
       shell: bash
       run: |
         curl -fsS -o get-poetry.py https://raw.githubusercontent.com/python-poetry/poetry/master/get-poetry.py
-        python get-poetry.py --preview -y
+        python get-poetry.py -y
         echo "::set-env name=PATH::$HOME/.poetry/bin:$PATH"
     - name: Configure poetry
       shell: bash
@@ -123,7 +123,7 @@ jobs:
     - name: Install dependencies
       shell: bash
       run: |
-        poetry install --no-dev
+        poetry install --no-dev -E tox
 
     - name: Install FreeTDS on MacOS
       if: matrix.os == 'macos'
@@ -199,7 +199,7 @@ jobs:
       shell: bash
       run: |
         curl -fsS -o get-poetry.py https://raw.githubusercontent.com/python-poetry/poetry/master/get-poetry.py
-        python get-poetry.py --preview -y
+        python get-poetry.py -y
         echo "::set-env name=PATH::$HOME/.poetry/bin:$PATH"
     - name: Configure poetry
       shell: bash
@@ -221,7 +221,7 @@ jobs:
     - name: Install dependencies
       shell: bash
       run: |
-        poetry install --no-dev
+        poetry install --no-dev -E tox
 
     - name: Install FreeTDS on MacOS
       if: matrix.os == 'macos'
