no windows just for now
Former-commit-id: 34730c9d3200010ec069669e4a73b4bf8981efd7

--- a/.github/workflows/on-push.yml
+++ b/.github/workflows/on-push.yml
@@ -54,7 +54,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        os: ['ubuntu', 'macos', 'windows']
+        os: ['ubuntu', 'macos']
         toxenv: ['pylint', 'docs', 'doctest', 'clean', 'pytest']
         include:
           - os: 'ubuntu'
