--- a/.github/workflows/on-push.yml
+++ b/.github/workflows/on-push.yml
@@ -17,15 +17,13 @@ jobs:
       - name: Test branch name
         run: |
           echo ${{ steps.extract_branch.outputs.branch }}
-      - uses: actions/checkout@v1
-        with:
-          fetch-depth: 1
+      - uses: actions/checkout@v2
       - name: Set up Python 3.7
         uses: actions/setup-python@v1
         with:
           python-version: 3.7
 
-      - uses: actions/cache@v1
+      - uses: actions/cache@v2
         with:
           path: ~/.cache/pre-commit
           key: pre-commit-cache
@@ -55,7 +53,7 @@ jobs:
       fail-fast: false
       matrix:
         os: ['ubuntu', 'macos']
-        toxenv: ['pylint', 'docs', 'doctest', 'clean', 'pytest']
+        task: ['pylint', 'docs', 'doctest', 'clean', 'pytest', 'slow', 'yarn', 'stackoverflow']
         include:
           - os: 'ubuntu'
             python-version: 3.6
@@ -65,28 +63,22 @@ jobs:
             python-version: 3.7
         exclude:
           - os: 'windows'
-            toxenv: 'pylint'
-          - os: 'windows'
-            toxenv: 'doctest'
+            task: ['pylint', 'doctest', 'slow', 'yarn', 'stackoverflow']
           - os: 'macos'
-            toxenv: 'pylint'
-          - os: 'macos'
-            toxenv: 'doctest'
+            task: ['pylint', 'doctest', 'slow', 'yarn', 'stackoverflow']
 
     runs-on: ${{ matrix.os }}-latest
 
     steps:
-    - uses: actions/checkout@v1
-      with:
-        fetch-depth: 1
+    - uses: actions/checkout@v2
 
-    - uses: actions/cache@v1
+    - uses: actions/cache@v2
       with:
         path: ~/.pymedphys
         key: pymedphys-data-${{ hashFiles('**/hashes.json') }}
 
     - name: Set up Python ${{ matrix.python-version }}
-      uses: actions/setup-python@v1
+      uses: actions/setup-python@v2
       with:
         python-version: ${{ matrix.python-version }}
 
@@ -97,13 +89,10 @@ jobs:
         echo ::set-output name=version::$(python -c "import sys; print('-'.join(str(v) for v in sys.version_info))")
 
     - name: Install poetry
-      shell: bash
       run: |
-        curl -fsS -o get-poetry.py https://raw.githubusercontent.com/python-poetry/poetry/master/get-poetry.py
-        python get-poetry.py -y
-        echo "::set-env name=PATH::$HOME/.poetry/bin:$PATH"
+        pip install poetry
+
     - name: Configure poetry
-      shell: bash
       run: |
         poetry config virtualenvs.in-project true
 
@@ -112,7 +101,7 @@ jobs:
       id: cache
       with:
         path: .venv
-        key: venv-${{ runner.os }}-${{ steps.full-python-version.outputs.version }}-${{ hashFiles('**/poetry.lock') }}
+        key: venv-${{ matrix.task }}-${{ runner.os }}-${{ steps.full-python-version.outputs.version }}-${{ hashFiles('**/poetry.lock') }}
 
     - name: Ensure cache is healthy
       if: steps.cache.outputs.cache-hit == 'true'
@@ -120,10 +109,41 @@ jobs:
       run: |
         poetry run pip --version >/dev/null 2>&1 || rm -rf .venv
 
-    - name: Install dependencies
-      shell: bash
+# =============================================================================
+#                                     CLEAN
+# =============================================================================
+
+    - name: Build wheel and install core dependencies
+      if: matrix.task == 'clean'
       run: |
-        poetry install --no-dev -E tox
+        poetry build --format wheel
+        pip install -r requirements-core.txt
+
+    - name: Install wheel
+      if: matrix.task == 'clean' && matrix.os == 'windows'
+      run: |
+        python -m pip install (Get-Item .\dist\*.whl) --no-dependencies
+
+    - name: Install wheel
+      if: matrix.task == 'clean' && matrix.os != 'windows'
+      run: |
+        python -m pip install ./dist/*.whl --no-dependencies
+
+    - name: Run clean tests
+      if: matrix.task == 'clean'
+      run: |
+        pymedphys --help
+        python -c "import pymedphys"
+
+
+
+
+
+
+
+    - name: Install dependencies
+      run: |
+        poetry install --no-dev
 
     - name: Install FreeTDS on MacOS
       if: matrix.os == 'macos'
