--- a/.github/workflows/on-push.yml
+++ b/.github/workflows/on-push.yml
@@ -53,7 +53,12 @@ jobs:
       fail-fast: false
       matrix:
         os: ['ubuntu', 'macos']
-        task: ['pylint', 'docs', 'doctest', 'clean', 'pytest', 'slow', 'yarn', 'stackoverflow']
+        task:
+          [
+            'pylint', 'docs', 'doctest', 'clean',
+            'pytest', 'slow', 'yarn', 'stackoverflow', 'updates',
+            'cypress'
+          ]
         include:
           - os: 'ubuntu'
             python-version: 3.6
@@ -63,17 +68,19 @@ jobs:
             python-version: 3.7
           - task: 'docs'
             install-type: 'docs'
-          - task: ['pylint', 'pytest', 'yarn', 'slow', 'doctest']
+          - task: ['pylint', 'pytest', 'yarn', 'slow', 'doctest', 'cypress']
             install-type: 'tests'
           - task: 'stackoverflow'
             install-type: 'plain'
           - task: 'clean'
             install-type: 'no-deps'
+          - task: 'updates'
+            install-type: 'tests-with-updates'
         exclude:
           - os: 'windows'
-            task: ['pylint', 'doctest', 'slow', 'yarn', 'stackoverflow']
+            task: ['pylint', 'doctest', 'slow', 'yarn', 'stackoverflow', 'updates', 'cypress']
           - os: 'macos'
-            task: ['pylint', 'doctest', 'slow', 'yarn', 'stackoverflow']
+            task: ['pylint', 'doctest', 'slow', 'yarn', 'stackoverflow', 'updates', 'cypress']
 
     runs-on: ${{ matrix.os }}-latest
 
@@ -123,7 +130,7 @@ jobs:
 ## System installs
 
     - uses: actions/setup-node@v1
-      if: matrix.install-type == 'yarn'
+      if: matrix.task == 'yarn'
 
     - name: Install FreeTDS on MacOS
       if: matrix.os == 'macos' && matrix.task != clean && matrix.task != stackoverflow
@@ -177,11 +184,19 @@ jobs:
       run: |
         poetry install --no-dev -E docs
 
-## Install with Documentation Environment
+## Install with Tests Environment
 
     - name: Run a tests installation
       if: matrix.install-type == 'tests'
       run: |
+        poetry install --no-dev -E tests
+
+## Update all packages and then install with tests environment and
+
+    - name: Update all packages then install with tests environment
+      if: matrix.install-type == 'tests-with-updates'
+      run: |
+        poetry update
         poetry install --no-dev -E tests
 
 
@@ -205,7 +220,7 @@ jobs:
 ## Pylint
 
     - name: Run pylint tests
-      if: matrix.task == 'pylint'
+      if: matrix.task == 'pylint' || matrix.task == 'updates'
       run: |
         poetry run pymedphys dev tests --pylint --pylint-jobs=1
 
@@ -223,321 +238,41 @@ jobs:
       run: |
         poetry run pymedphys dev tests -v -s --run-only-yarn
 
+## Pytest
 
-
-
-    - name: Install dependencies
+    - name: Run basic pytest tests
+      if: matrix.task == 'pytest' || matrix.task == 'updates'
       run: |
-        poetry install --no-dev
+        poetry run pymedphys dev tests -v
 
-    - name: Install FreeTDS on MacOS
-      if: matrix.os == 'macos'
+## Docs
+
+    - name: Build docs
+      if: matrix.task == 'docs'
       run: |
-        brew install freetds
+        poetry run pymedphys dev docs
 
-    - name: Install Pandoc on Ubuntu
-      if: matrix.toxenv == 'docs' && matrix.os == 'ubuntu'
-      run: |
-        sudo apt-get install -y pandoc
+## Cypress
 
-    - name: Install Pandoc on MacOS
-      if: matrix.toxenv == 'docs' && matrix.os == 'macos'
-      run: |
-        brew install pandoc
-
-    - name: Install Pandoc on Windows
-      if: matrix.toxenv == 'docs' && matrix.os == 'windows'
-      run: |
-        choco install pandoc
-
-    - name: Run Tox on Windows
-      if: matrix.os == 'windows'
-      run: |
-        poetry run tox -e ${{ matrix.toxenv }}-win
-
-    - name: Run Tox on Nix
-      if: matrix.os == 'macos' || matrix.os == 'ubuntu'
-      run: |
-        poetry run tox -e ${{ matrix.toxenv }}-nix
-
-# =============================================================================
-
-  ToxSecond:
-    strategy:
-      fail-fast: false
-      matrix:
-        os: ['ubuntu']
-        toxenv: ['slow', 'yarn', 'stackoverflow']
-        include:
-          - toxenv: 'slow'
-            python-version: 3.6
-          - toxenv: 'yarn'
-            python-version: 3.6
-          - toxenv: 'stackoverflow'
-            python-version: 3.8
-
-    needs: ToxFirst
-    runs-on: ${{ matrix.os }}-latest
-
-    steps:
-    - uses: actions/checkout@v1
-      with:
-        fetch-depth: 1
-
-    - uses: actions/cache@v1
-      with:
-        path: ~/.pymedphys
-        key: pymedphys-data-${{ hashFiles('**/hashes.json') }}
-
-    - name: Set up Python ${{ matrix.python-version }}
-      uses: actions/setup-python@v1
-      with:
-        python-version: ${{ matrix.python-version }}
-
-    - name: Get full Python version
-      id: full-python-version
-      shell: bash
-      run: |
-        echo ::set-output name=version::$(python -c "import sys; print('-'.join(str(v) for v in sys.version_info))")
-
-    - name: Install poetry
-      shell: bash
-      run: |
-        curl -fsS -o get-poetry.py https://raw.githubusercontent.com/python-poetry/poetry/master/get-poetry.py
-        python get-poetry.py -y
-        echo "::set-env name=PATH::$HOME/.poetry/bin:$PATH"
-    - name: Configure poetry
-      shell: bash
-      run: |
-        poetry config virtualenvs.in-project true
-
-    - name: Set up cache
-      uses: actions/cache@v2
-      id: cache
-      with:
-        path: .venv
-        key: venv-${{ runner.os }}-${{ steps.full-python-version.outputs.version }}-${{ hashFiles('**/poetry.lock') }}
-
-    - name: Ensure cache is healthy
-      if: steps.cache.outputs.cache-hit == 'true'
-      shell: bash
-      run: poetry run pip --version >/dev/null 2>&1 || rm -rf .venv
-
-    - name: Install dependencies
-      shell: bash
-      run: |
-        poetry install --no-dev -E tox
-
-    - name: Install FreeTDS on MacOS
-      if: matrix.os == 'macos'
-      run: |
-        brew install freetds
-
-    - name: Install Pandoc on Ubuntu
-      if: matrix.toxenv == 'docs' && matrix.os == 'ubuntu'
-      run: |
-        sudo apt-get install -y pandoc
-
-    - name: Install Pandoc on MacOS
-      if: matrix.toxenv == 'docs' && matrix.os == 'macos'
-      run: |
-        brew install pandoc
-
-    - name: Install Pandoc on Windows
-      if: matrix.toxenv == 'docs' && matrix.os == 'windows'
-      run: |
-        choco install pandoc
-
-    - name: Run Tox on Windows
-      if: matrix.os == 'windows'
-      run: |
-        poetry run tox -e ${{ matrix.toxenv }}-win
-
-    - name: Run Tox on Nix
-      if: matrix.os == 'macos' || matrix.os == 'ubuntu'
-      run: |
-        poetry run tox -e ${{ matrix.toxenv }}-nix
-
-# =============================================================================
-
-  WithUpdates:
-    strategy:
-      fail-fast: false
-      matrix:
-        os: ['ubuntu']
-        python-version: [3.7]
-        toxenv: ['pylint', 'pytest']
-
-    needs: ToxFirst
-    runs-on: ${{ matrix.os }}-latest
-
-    steps:
-    - uses: actions/checkout@v1
-      with:
-        fetch-depth: 1
-
-    - name: Set up Python ${{ matrix.python-version }}
-      uses: actions/setup-python@v1
-      with:
-        python-version: ${{ matrix.python-version }}
-
-    - name: Show python information
-      run: |
-        python -c "import sys; print(sys.version); print(sys.executable); print(sys.platform)"
-        python -c "import platform; print(platform.machine()); print(platform.release())"
-
-    - uses: actions/cache@v1
-      with:
-        path: ~/.pymedphys
-        key: pymedphys-data-${{ hashFiles('**/hashes.json') }}
-
-    - uses: actions/cache@v1
-      if: startsWith(runner.os, 'Linux')
-      with:
-        path: ~/.cache/pip
-        key: ${{ runner.os }}-pip-${{ hashFiles('**/poetry.lock') }}
-        restore-keys: |
-          ${{ runner.os }}-pip-
-
-    - uses: actions/cache@v1
-      if: startsWith(runner.os, 'macOS')
-      with:
-        path: ~/Library/Caches/pip
-        key: ${{ runner.os }}-pip-${{ hashFiles('**/poetry.lock') }}
-        restore-keys: |
-          ${{ runner.os }}-pip-
-
-    - uses: actions/cache@v1
-      if: startsWith(runner.os, 'Windows')
-      with:
-        path: ~\AppData\Local\pip\Cache
-        key: ${{ runner.os }}-pip-${{ hashFiles('**/poetry.lock') }}
-        restore-keys: |
-          ${{ runner.os }}-pip-
-
-    - name: Install FreeTDS on MacOS
-      if: matrix.os == 'macos'
-      run: |
-        brew install freetds
-
-    - name: Upgrade pip, install poetry and tox
-      run: |
-        python -m pip install --upgrade pip poetry tox
-
-    - name: Run initial poetry install
-      run: |
-        poetry install
-
-    - name: Run poetry update
-      run: |
-        poetry update
-
-    - name: Run Tox if anything has changed
-      run: |
-        git add -A && git diff HEAD --name-only --exit-code || poetry run tox -e ${{ matrix.toxenv }}
-
-# =============================================================================
-
-  Cypress:
-    strategy:
-      fail-fast: false
-      matrix:
-        os: ['ubuntu']
-        python-version: [3.7]
-
-    runs-on: ${{ matrix.os }}-latest
-
-    needs: ToxSecond
-    if: "!contains(github.event.head_commit.message, '--skip-gui')"
-
-    steps:
-    - uses: actions/checkout@v1
-      with:
-        fetch-depth: 1
-
-    - name: Set up Python ${{ matrix.python-version }}
-      uses: actions/setup-python@v1
-      with:
-        python-version: ${{ matrix.python-version }}
-
-    - name: Show python information
-      run: |
-        python -c "import sys; print(sys.version); print(sys.executable); print(sys.platform)"
-        python -c "import platform; print(platform.machine()); print(platform.release())"
-
-#####################
-# CACHE LOGIC START #
-#####################
-
-# Unfortunately at this current point in time there does not appear to be a way
-# to easily reuse content across different actions. The below section manages
-# the caching for pymedphys installations from poetry. This logic is often
-# repeated across different actions. Once action step reuse is supported this
-# section will be refactored out.
-
-    - uses: actions/cache@v1
-      with:
-        path: ~/.pymedphys
-        key: pymedphys-data-${{ hashFiles('**/hashes.json') }}
-
-    - uses: actions/cache@v1
-      with:
-        path: ~/.cache/pypoetry/virtualenvs
-        key: ${{ runner.os }}-poetry-${{ hashFiles('**/poetry.lock') }}
-        restore-keys: |
-          ${{ runner.os }}-poetry-
-
-    - uses: actions/cache@v1
-      if: startsWith(runner.os, 'Linux')
-      with:
-        path: ~/.cache/pip
-        key: ${{ runner.os }}-pip-${{ hashFiles('**/poetry.lock') }}
-        restore-keys: |
-          ${{ runner.os }}-pip-
-
-    - uses: actions/cache@v1
-      if: startsWith(runner.os, 'macOS')
-      with:
-        path: ~/Library/Caches/pip
-        key: ${{ runner.os }}-pip-${{ hashFiles('**/poetry.lock') }}
-        restore-keys: |
-          ${{ runner.os }}-pip-
-
-    - uses: actions/cache@v1
-      if: startsWith(runner.os, 'Windows')
-      with:
-        path: ~\AppData\Local\pip\Cache
-        key: ${{ runner.os }}-pip-${{ hashFiles('**/poetry.lock') }}
-        restore-keys: |
-          ${{ runner.os }}-pip-
-
-###################
-# CACHE LOGIC END #
-###################
-
-    - name: Upgrade pip, install poetry
-      run: |
-        python -m pip install --upgrade pip poetry
-
-    - name: Run poetry install
-      run: |
-        poetry install --no-dev -E tests
-
-    - name: Download demo data
+    - name: Download GUI demo data
+      if: matrix.task == 'cypress'
       run: |
         poetry run python -c "import pymedphys; pymedphys.zip_data_paths('mu-density-gui-e2e-data.zip')"
 
     - name: Run PyMedPhys GUI
+      if: matrix.task == 'cypress'
       run: |
         poetry run pymedphys gui &
 
     - name: Install Cypress Dependencies
+      if: matrix.task == 'cypress'
       uses: cypress-io/github-action@v1
       with:
         runTests: false
         working-directory: tests/e2e
 
     - name: Cypress run
+      if: matrix.task == 'cypress'
       uses: cypress-io/github-action@v1
       with:
         install: false
